--- a/style.css
+++ b/style.css
@@ -3,11 +3,31 @@ body {
 }
 
 form {
-    display: flex;
     position: absolute;
     top: 0;
     left: 675px;
     color: #cb8400;
+}
+
+button {
+    width: 100px;
+    height: 80px;
+}
+
+.form-group {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+}
+
+.form-group label {
+    font-weight: bold;
+}
+
+.form-group input {
+    padding: 5px;
+    color: white; /* Set input text color */
+    background-color: #cb8400; /* Set input background color */
 }
 
 #background-image {
